Fixed layout issues in smaller device.

--- a/public/css/weather-buddy.css
+++ b/public/css/weather-buddy.css
@@ -129,6 +129,9 @@ body {
 .table-panel {
 	margin-bottom: 20px;
 	border-collapse: separate;
+	width: 100%;
+	max-width: 100%;
+	table-layout: fixed;
 }
 .table-panel-tabs > td {
 	background-image: none;
@@ -142,6 +145,7 @@ body {
 	padding: 10px 15px;
 	line-height: 1.42857143;
 	color: #fff;
+	width: 79px;
 }
 .table-panel-tab:hover {
 	border: 1px solid #fff;
@@ -357,6 +361,9 @@ body {
 	}
 	.weather-details {
 		margin: 30px 0 10px;
+	}
+	.today-details > tbody > tr > td {
+		padding: 5px 8px;
 	}
 }
 
